# OpenGL-Render-Engine

./: .gitignore  CMakeLists.txt  README.md
Libraries/: CMakeLists.txt
Source/Application/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  Camera.cpp  Camera.h  FileManager.cpp  FileManager.h  Main.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Primitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  imgui.ini
Source/Application/Debug/: DebugShapes.cpp  DebugShapes.h
Source/Application/Editor/: Scene.cpp  Scene.h
Source/Application/GL_Objects/: Cubemap.cpp  Cubemap.h  FrameBuffer.cpp  FrameQuad.cpp  FrameQuad.h  Window.cpp
Source/Application/Includes/: imGuiInclude.h
Source/Application/Lights/: Light.cpp  Light.h  PointLight.cpp  PointLight.h
Source/Application/Objects/: Skybox.cpp  Skybox.h
Source/Application/PostProccess/: Bloom.cpp
Source/Application/Shaders/Debug/: debugVertex.glsl
Source/Application/Shaders/Main/: fragShader.glsl  vertexShader.glsl
Source/Application/Shaders/PostProcess/Bloom/: bloomFrag.glsl  bloomVertex.glsl
Source/Application/Shaders/PostProcess/Blur/: blurVertex.glsl
Source/Application/Shaders/PostProcess/FrameQuad/: FrameQuadFrag.glsl
Source/Application/TransformGizmo/: TransformGizmo.cpp
Source/Application/UI/: EngineUI.cpp  EngineUI.h
Source/Application/UI/Elements/: UISceneNode.cpp  UISceneNode.h
Source/Application/UI/Layers/: CMakeLists.txt  UILayer.cpp  UIScene.cpp  UIScene.h  UISceneTree.cpp  UISceneTree.h
Source/Application/UI/Layers/UI_CameraProperties/: CMakeLists.txt  UI_CameraProperties.cpp  UI_CameraProperties.h
Source/Application/UI/Layers/UI_ObjectProperties/: UI_ObjectProperties.h
Source/Application/UI/Layers/UI_Scene/: UI_Scene.cpp  UI_Scene.h
Source/Application/UI/Layers/UI_Settings/: UI_Settings.cpp  UI_Settings.h
Source/ImGui_Beta/: CMakeLists.txt
assets/Shaders/Debug/: tangentFrag.glsl  tangentGeometry.glsl  tangentVertex.glsl
assets/Shaders/Main/: fragShader.glsl  vertexShader.glsl
assets/Shaders/Shadow/: shadowFrag.glsl  shadowGeometry.glsl  shadowVertex.glsl
src/: BaseObject.cpp  BaseObject.h  CMakeLists.txt  Camera.cpp  Camera.h  FileManager.cpp  FileManager.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  ObjectArray.h  Primitives.h  Transfrom.h  imgui.ini
src/Core/: Engine.cpp  Engine.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/Debug/: LinesContainer.h
src/Editor/: Scene.h
src/GL_Objects/: Cubemap.h  FrameBuffer.cpp  FrameQuad.cpp  FrameQuad.h  Window.cpp
src/Lights/: Light.h  PointLight.cpp  PointLight.h
src/Math/: Math.cpp  Math.h
src/PostProccess/: Bloom.h
src/Renderer/: Cubemap.cpp  Cubemap.h  DebugShapes.cpp  DebugShapes.h  FrameBuffer.cpp  FrameBuffer.h  FrameQuad.cpp  FrameQuad.h  LinesContainer.cpp  LinesContainer.h  Material.cpp  Material.h  Primitives.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Renderer/PostProccess/: Bloom.cpp  Bloom.h
src/Resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Resources/Raw/: RawStructs.cpp  RawStructs.h
src/Scene/: BaseObject.cpp  BaseObject.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  LightComponent.cpp  LightComponent.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  ObjectMesh.cpp  ObjectMesh.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Skybox.cpp  Skybox.h  TransformComponent.cpp  TransformComponent.h
src/Scene/Lights/: Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Shaders/Main/: fragShader.glsl
src/Shaders/PostProcess/Blur/: blurFrag.glsl
src/TransformGizmo/: TransformGizmo.h
src/UI/: EngineUI.cpp  EngineUI.h
src/UI/Elements/: CMakeLists.txt  UIElement.cpp  UIElement.h  UISceneNode.cpp  UISceneNode.h
src/UI/Layers/: UILayer.h  UISceneTree.cpp  UISceneTree.h  UI_AssetBrowser.cpp  UI_AssetBrowser.h  UI_CameraProperties.cpp  UI_CameraProperties.h  UI_Console.cpp  UI_Console.h  UI_Materials.cpp  UI_Materials.h  UI_ObjectProperties.cpp  UI_ObjectProperties.h  UI_Scene.cpp  UI_Scene.h  UI_Settings.cpp  UI_Settings.h
src/UI/Layers/UI_CameraProperties/: UI_CameraProperties.cpp  UI_CameraProperties.h
src/UI/Layers/UI_ObjectProperties/: CMakeLists.txt  UI_ObjectProperties.h
src/UI/Layers/UI_Scene/: UI_Scene.h
src/UI/Layers/UI_Settings/: UI_Settings.h
